--- a/index.html
+++ b/index.html
@@ -8,16 +8,10 @@
     <title>carosello</title>
 </head>
 <body>
-    <div class="container">
-        <div class="card my-5">
-            <img src="./img/01.webp" class="card-img-top" alt="img1">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-          </div>
-          <button class="btn btn-primary"> avanti</button>
-          <button class="btn btn-primary"> indietro</button>
+    <div id="container" class="container">
+       
+          <!-- <button class="btn btn-primary"> avanti</button>
+          <button class="btn btn-primary"> indietro</button> -->
     </div>
     <script src="./js/script.js" type="text/javascript"></script>
 </body>
