--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 </head>
 <body>
     <div id="container" class="container">
-       
-          <!-- <button class="btn btn-primary"> avanti</button>
-          <button class="btn btn-primary"> indietro</button> -->
+        
     </div>
+          <div class="container">
+            <button id="next" class="btn btn-primary"> avanti</button>
+          <button id="priviusly" class="btn btn-primary"> indietro</button>
+          </div>
     <script src="./js/script.js" type="text/javascript"></script>
 </body>
 </html>
